Criação do fragment que vai receber o dados no clique e vai passar para a activity de detalhes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">FragmentsAndroid</string>
+    <string name="endereco_do_hotel">Endereço do Hotel</string>
+    <string name="nome_do_hotel">Nome do Hotel</string>
 </resources>
